@@ -21,11 +21,15 @@ package lucee.commons.io.res.type.file;
 import java.io.BufferedInputStream;
 import java.io.BufferedOutputStream;
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.nio.file.CopyOption;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
+import java.nio.file.StandardOpenOption;
+import java.nio.file.attribute.DosFileAttributes;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -47,653 +51,711 @@ import lucee.commons.lang.ExceptionUtil;
  */
 public final class FileResource extends File implements Resource {
 
-    private final FileResourceProvider provider;
+	private static final long serialVersionUID = -6856656594615376447L;
+	private static final CopyOption[] COPY_OPTIONS = new CopyOption[] { StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES };
 
-    /**
-     * Constructor for the factory
-     * 
-     * @param pathname
-     */
-    FileResource(FileResourceProvider provider, String pathname) {
-	super(pathname);
-	this.provider = provider;
-    }
+	private final FileResourceProvider provider;
 
-    /**
-     * Inner Constr constructor to create parent/child
-     * 
-     * @param parent
-     * @param child
-     */
-    private FileResource(FileResourceProvider provider, File parent, String child) {
-	super(parent, child);
-	this.provider = provider;
-    }
-
-    @Override
-    public void copyFrom(Resource res, boolean append) throws IOException {
-	IOUtil.copy(res, this.getOutputStream(append), true);
-    }
-
-    @Override
-    public void copyTo(Resource res, boolean append) throws IOException {
-	IOUtil.copy(this, res.getOutputStream(append), true);
-    }
-
-    @Override
-    public Resource getAbsoluteResource() {
-	return new FileResource(provider, getAbsolutePath());
-    }
-
-    @Override
-    public Resource getCanonicalResource() throws IOException {
-	return new FileResource(provider, getCanonicalPath());
-    }
-
-    @Override
-    public Resource getParentResource() {
-	String p = getParent();
-	if (p == null) return null;
-	return new FileResource(provider, p);
-    }
-
-    @Override
-    public Resource[] listResources() {
-	String[] files = list();
-	if (files == null) return null;
-
-	Resource[] resources = new Resource[files.length];
-	for (int i = 0; i < files.length; i++) {
-	    resources[i] = getRealResource(files[i]);
+	/**
+	 * Constructor for the factory
+	 * 
+	 * @param pathname
+	 */
+	FileResource(FileResourceProvider provider, String pathname) {
+		super(pathname);
+		this.provider = provider;
 	}
-	return resources;
-    }
 
-    @Override
-    public String[] list(ResourceFilter filter) {
-	String[] files = list();
-	if (files == null) return null;
-
-	List list = new ArrayList();
-	FileResource res;
-	for (int i = 0; i < files.length; i++) {
-	    res = new FileResource(provider, this, files[i]);
-	    if (filter.accept(res)) list.add(files[i]);
+	/**
+	 * Inner Constr constructor to create parent/child
+	 * 
+	 * @param parent
+	 * @param child
+	 */
+	private FileResource(FileResourceProvider provider, File parent, String child) {
+		super(parent, child);
+		this.provider = provider;
 	}
-	return (String[]) list.toArray(new String[list.size()]);
-    }
 
-    @Override
-    public Resource[] listResources(ResourceFilter filter) {
-	String[] files = list();
-	if (files == null) return null;
+	@Override
+	public void copyFrom(Resource res, boolean append) throws IOException {
 
-	List list = new ArrayList();
-	Resource res;
-	for (int i = 0; i < files.length; i++) {
-	    res = getRealResource(files[i]);
-	    if (filter.accept(res)) list.add(res);
+		if (res instanceof File && (!append || !this.isFile())) {
+			try {
+				Files.copy(((File) res).toPath(), this.toPath(), COPY_OPTIONS);
+				return;
+			}
+			catch (Exception exception) {
+			}
+		}
+
+		IOUtil.copy(res, this.getOutputStream(append), true);
+
+		// executable?
+		boolean e = res instanceof File && ((File) res).canExecute();
+		boolean w = res.canWrite();
+		boolean r = res.canRead();
+
+		if (e) this.setExecutable(true);
+		if (w != this.canWrite()) this.setWritable(w);
+		if (r != this.canRead()) this.setReadable(r);
 	}
-	return (Resource[]) list.toArray(new FileResource[list.size()]);
-    }
 
-    @Override
-    public String[] list(ResourceNameFilter filter) {
-	String[] files = list();
-	if (files == null) return null;
-	List list = new ArrayList();
-	for (int i = 0; i < files.length; i++) {
-	    if (filter.accept(this, files[i])) list.add(files[i]);
-	}
-	return (String[]) list.toArray(new String[list.size()]);
-    }
+	@Override
+	public void copyTo(Resource res, boolean append) throws IOException {
 
-    @Override
-    public Resource[] listResources(ResourceNameFilter filter) {
-	String[] files = list();
-	if (files == null) return null;
+		if (res instanceof File && (!append || !res.isFile())) {
+			try {
+				Files.copy(this.toPath(), ((File) res).toPath(), COPY_OPTIONS);
+				return;
+			}
+			catch (Exception exception) {
+			}
+		}
 
-	List list = new ArrayList();
-	for (int i = 0; i < files.length; i++) {
-	    if (filter.accept(this, files[i])) list.add(getRealResource(files[i]));
-	}
-	return (Resource[]) list.toArray(new Resource[list.size()]);
-    }
+		IOUtil.copy(this, res.getOutputStream(append), true);
+		boolean e = canExecute();
+		boolean w = canWrite();
+		boolean r = canRead();
 
-    @Override
-    public void moveTo(Resource dest) throws IOException {
-	if (this.equals(dest)) return;
-	boolean done = false;
-	if (dest instanceof File) {
-	    provider.lock(this);
-	    try {
-		if (dest.exists() && !dest.delete()) throw new IOException("can't move file " + this.getAbsolutePath() + " cannot remove existing file " + dest.getAbsolutePath());
-
-		done = super.renameTo((File) dest);
-		/*
-		 * if(!super.renameTo((File)dest)) { throw new
-		 * IOException("can't move file "+this.getAbsolutePath()+" to destination resource "+dest.
-		 * getAbsolutePath()); }
-		 */
-	    }
-	    finally {
-		provider.unlock(this);
-	    }
-	}
-	if (!done) {
-	    ResourceUtil.checkMoveToOK(this, dest);
-	    IOUtil.copy(getInputStream(), dest, true);
-	    if (!this.delete()) {
-		throw new IOException("can't delete resource " + this.getAbsolutePath());
-	    }
-	}
-    }
-
-    @Override
-    public InputStream getInputStream() throws IOException {
-	// provider.lock(this);
-	provider.read(this);
-	try {
-	    // return new BufferedInputStream(new ResourceInputStream(this,new FileInputStream(this)));
-	    return new BufferedInputStream(new FileInputStream(this));
-	}
-	catch (IOException ioe) {
-	    // provider.unlock(this);
-	    throw ioe;
-	}
-    }
-
-    @Override
-    public OutputStream getOutputStream() throws IOException {
-	return getOutputStream(false);
-    }
-
-    @Override
-    public OutputStream getOutputStream(boolean append) throws IOException {
-	provider.lock(this);
-	try {
-	    if (!super.exists() && !super.createNewFile()) {
-		throw new IOException("can't create file " + this);
-	    }
-	    return new BufferedOutputStream(new ResourceOutputStream(this, new FileOutputStream(this, append)));
-	}
-	catch (IOException ioe) {
-	    provider.unlock(this);
-	    throw ioe;
-	}
-    }
-
-    @Override
-    public void createFile(boolean createParentWhenNotExists) throws IOException {
-	provider.lock(this);
-	try {
-	    if (createParentWhenNotExists) {
-		File p = super.getParentFile();
-		if (!p.exists()) p.mkdirs();
-	    }
-	    if (!super.createNewFile()) {
-		if (super.isFile()) throw new IOException("can't create file " + this + ", file already exists");
-		throw new IOException("can't create file " + this);
-	    }
-	}
-	finally {
-	    provider.unlock(this);
-	}
-    }
-
-    @Override
-    public void remove(boolean alsoRemoveChildren) throws IOException {
-	if (alsoRemoveChildren && isDirectory()) {
-	    Resource[] children = listResources();
-	    for (int i = 0; i < children.length; i++) {
-		children[i].remove(alsoRemoveChildren);
-	    }
-	}
-	provider.lock(this);
-	try {
-	    if (!super.delete()) {
-		if (!super.exists()) throw new IOException("can't delete file " + this + ", file does not exist");
-		if (!super.canWrite()) throw new IOException("can't delete file " + this + ", no access");
-		throw new IOException("can't delete file " + this);
-	    }
-	}
-	finally {
-	    provider.unlock(this);
-	}
-    }
-
-    @Override
-    public String getReal(String realpath) {
-	if (realpath.length() <= 2) {
-	    if (realpath.length() == 0) return getPath();
-	    if (realpath.equals(".")) return getPath();
-	    if (realpath.equals("..")) return getParent();
-	}
-	return new FileResource(provider, this, realpath).getPath();
-    }
-
-    @Override
-    public Resource getRealResource(String realpath) {
-	if (realpath.length() <= 2) {
-	    if (realpath.length() == 0) return this;
-	    if (realpath.equals(".")) return this;
-	    if (realpath.equals("..")) return getParentResource();
-	}
-	return new FileResource(provider, this, realpath);
-    }
-
-    public ContentType getContentType() {
-	return ResourceUtil.getContentType(this);
-    }
-
-    @Override
-    public void createDirectory(boolean createParentWhenNotExists) throws IOException {
-	provider.lock(this);
-	try {
-	    if (createParentWhenNotExists ? !_mkdirs() : !super.mkdir()) {
-		if (super.isDirectory()) throw new IOException("can't create directory " + this + ", directory already exists");
-		throw new IOException("can't create directory " + this);
-	    }
-	}
-	finally {
-	    provider.unlock(this);
-	}
-    }
-
-    @Override
-    public ResourceProvider getResourceProvider() {
-	return provider;
-    }
-
-    @Override
-    public boolean isReadable() {
-	return canRead();
-    }
-
-    @Override
-    public boolean isWriteable() {
-	return canWrite();
-    }
-
-    @Override
-    public boolean renameTo(Resource dest) {
-	try {
-	    moveTo(dest);
-	    return true;
-	}
-	catch (IOException e) {}
-	return false;
-    }
-
-    @Override
-    public boolean isArchive() {
-	return getAttribute(ATTRIBUTE_ARCHIVE);
-    }
-
-    @Override
-    public boolean isSystem() {
-	return getAttribute(ATTRIBUTE_SYSTEM);
-    }
-
-    @Override
-    public int getMode() {
-	if (!exists()) return 0;
-	if (SystemUtil.isUnix()) {
-	    try {
-		// TODO geht nur fuer file
-		String line = Command.execute("ls -ld " + getPath(), false).getOutput();
-
-		line = line.trim();
-		line = line.substring(0, line.indexOf(' '));
-		// print.ln(getPath());
-		return ModeUtil.toOctalMode(line);
-
-	    }
-	    catch (Exception e) {}
+		if (e && res instanceof File) ((File) res).setExecutable(true);
+		if (w != res.canWrite()) res.setWritable(w);
+		if (r != res.canRead()) res.setReadable(r);
 
 	}
-	int mode = SystemUtil.isWindows() && exists() ? 0111 : 0;
-	if (super.canRead()) mode += 0444;
-	if (super.canWrite()) mode += 0222;
-	return mode;
-    }
 
-    @Override
-    public void setMode(int mode) throws IOException {
-	// TODO unter windows mit setReadable usw.
-	if (!SystemUtil.isUnix()) return;
-	provider.lock(this);
-	try {
-	    // print.ln(ModeUtil.toStringMode(mode));
-	    if (Runtime.getRuntime().exec(new String[] { "chmod", ModeUtil.toStringMode(mode), getPath() }).waitFor() != 0)
-		throw new IOException("chmod  " + ModeUtil.toStringMode(mode) + " " + toString() + " failed");
+	@Override
+	public Resource getAbsoluteResource() {
+		return new FileResource(provider, getAbsolutePath());
 	}
-	catch (InterruptedException e) {
-	    throw new IOException("Interrupted waiting for chmod " + toString());
+
+	@Override
+	public Resource getCanonicalResource() throws IOException {
+		return new FileResource(provider, getCanonicalPath());
 	}
-	finally {
-	    provider.unlock(this);
+
+	@Override
+	public Resource getParentResource() {
+		String p = getParent();
+		if (p == null) return null;
+		return new FileResource(provider, p);
 	}
-    }
 
-    @Override
-    public void setArchive(boolean value) throws IOException {
-	setAttribute(ATTRIBUTE_ARCHIVE, value);
-    }
+	@Override
+	public Resource[] listResources() {
+		String[] files = list();
+		if (files == null) return null;
 
-    @Override
-    public void setHidden(boolean value) throws IOException {
-	setAttribute(ATTRIBUTE_HIDDEN, value);
-    }
-
-    @Override
-    public void setSystem(boolean value) throws IOException {
-	setAttribute(ATTRIBUTE_SYSTEM, value);
-    }
-
-    @Override
-
-    public boolean setReadable(boolean value) {
-	if (!SystemUtil.isUnix()) return false;
-	try {
-	    setMode(ModeUtil.setReadable(getMode(), value));
-	    return true;
+		Resource[] resources = new Resource[files.length];
+		for (int i = 0; i < files.length; i++) {
+			resources[i] = getRealResource(files[i]);
+		}
+		return resources;
 	}
-	catch (IOException e) {
-	    return false;
-	}
-    }
 
-    @Override
-    public boolean setWritable(boolean value) {
-	// setReadonly
-	if (!value) {
-	    try {
+	@Override
+	public String[] list(ResourceFilter filter) {
+		String[] files = list();
+		if (files == null) return null;
+
+		List<String> list = new ArrayList<String>();
+		FileResource res;
+		for (int i = 0; i < files.length; i++) {
+			res = new FileResource(provider, this, files[i]);
+			if (filter.accept(res)) list.add(files[i]);
+		}
+		return list.toArray(new String[list.size()]);
+	}
+
+	@Override
+	public Resource[] listResources(ResourceFilter filter) {
+		String[] files = list();
+		if (files == null) return null;
+
+		List<Resource> list = new ArrayList<Resource>();
+		Resource res;
+		for (int i = 0; i < files.length; i++) {
+			res = getRealResource(files[i]);
+			if (filter.accept(res)) list.add(res);
+		}
+		return list.toArray(new FileResource[list.size()]);
+	}
+
+	@Override
+	public String[] list(ResourceNameFilter filter) {
+		String[] files = list();
+		if (files == null) return null;
+		List<String> list = new ArrayList<String>();
+		for (int i = 0; i < files.length; i++) {
+			if (filter.accept(this, files[i])) list.add(files[i]);
+		}
+		return list.toArray(new String[list.size()]);
+	}
+
+	@Override
+	public Resource[] listResources(ResourceNameFilter filter) {
+		String[] files = list();
+		if (files == null) return null;
+
+		List<Resource> list = new ArrayList<Resource>();
+		for (int i = 0; i < files.length; i++) {
+			if (filter.accept(this, files[i])) list.add(getRealResource(files[i]));
+		}
+		return list.toArray(new Resource[list.size()]);
+	}
+
+	@Override
+	public void moveTo(Resource dest) throws IOException {
+		if (this.equals(dest)) return;
+		boolean done = false;
+		if (dest instanceof File) {
+			provider.lock(this);
+			try {
+				if (dest.exists() && !dest.delete())
+					throw new IOException("Can't move file [" + this.getAbsolutePath() + "] cannot remove existing file [" + dest.getAbsolutePath() + "]");
+
+				done = super.renameTo((File) dest);
+				/*
+				 * if(!super.renameTo((File)dest)) { throw new
+				 * IOException("can't move file "+this.getAbsolutePath()+" to destination resource "+dest.
+				 * getAbsolutePath()); }
+				 */
+			}
+			finally {
+				provider.unlock(this);
+			}
+		}
+		if (!done) {
+			ResourceUtil.checkMoveToOK(this, dest);
+			IOUtil.copy(getInputStream(), dest, true);
+			if (!this.delete()) {
+				throw new IOException("Can't delete resource [" + this.getAbsolutePath() + "]");
+			}
+		}
+	}
+
+	@Override
+	public InputStream getInputStream() throws IOException {
+		// provider.lock(this);
+		provider.read(this);
+		try {
+
+			return new BufferedInputStream(Files.newInputStream(toPath(), StandardOpenOption.READ));
+			// return new BufferedInputStream(new FileInputStream(this));
+		}
+		catch (IOException ioe) {
+			// provider.unlock(this);
+			throw ioe;
+		}
+	}
+
+	@Override
+	public OutputStream getOutputStream() throws IOException {
+		return getOutputStream(false);
+	}
+
+	@Override
+	public OutputStream getOutputStream(boolean append) throws IOException {
 		provider.lock(this);
-		if (!super.setReadOnly()) throw new IOException("can't set resource read-only");
-	    }
-	    catch (IOException ioe) {
+		try {
+			if (!super.exists() && !super.createNewFile()) {
+				throw new IOException("Can't create file [" + this + "]");
+			}
+			return new BufferedOutputStream(new ResourceOutputStream(this, new FileOutputStream(this, append)));
+		}
+		catch (IOException ioe) {
+			provider.unlock(this);
+			throw ioe;
+		}
+	}
+
+	@Override
+	public void createFile(boolean createParentWhenNotExists) throws IOException {
+		provider.lock(this);
+		try {
+			if (createParentWhenNotExists) {
+				File p = super.getParentFile();
+				if (!p.exists()) p.mkdirs();
+			}
+			if (!super.createNewFile()) {
+				if (super.isFile()) throw new IOException("Can't create file [" + this + "], file already exists");
+				throw new IOException("Can't create file [" + this + "]");
+			}
+		}
+		finally {
+			provider.unlock(this);
+		}
+	}
+
+	@Override
+	public void remove(boolean alsoRemoveChildren) throws IOException {
+		if (alsoRemoveChildren && isDirectory()) {
+			Resource[] children = listResources();
+			if (children != null) {
+				for (int i = 0; i < children.length; i++) {
+					children[i].remove(alsoRemoveChildren);
+				}
+			}
+		}
+		provider.lock(this);
+		try {
+			if (!super.delete()) {
+				if (!super.exists()) throw new IOException("Can't delete file [" + this + "], file does not exist");
+				if (!super.canWrite()) throw new IOException("Can't delete file [" + this + "], no access");
+				throw new IOException("Can't delete file [" + this + "]");
+			}
+		}
+		finally {
+			provider.unlock(this);
+		}
+	}
+
+	@Override
+	public String getReal(String realpath) {
+		if (realpath.length() <= 2) {
+			if (realpath.length() == 0) return getPath();
+			if (realpath.equals(".")) return getPath();
+			if (realpath.equals("..")) return getParent();
+		}
+		return new FileResource(provider, this, realpath).getPath();
+	}
+
+	@Override
+	public Resource getRealResource(String realpath) {
+		if (realpath.length() <= 2) {
+			if (realpath.length() == 0) return this;
+			if (realpath.equals(".")) return this;
+			if (realpath.equals("..")) return getParentResource();
+		}
+		return new FileResource(provider, this, realpath);
+	}
+
+	public ContentType getContentType() {
+		return ResourceUtil.getContentType(this);
+	}
+
+	@Override
+	public void createDirectory(boolean createParentWhenNotExists) throws IOException {
+		provider.lock(this);
+		try {
+			if (createParentWhenNotExists ? !_mkdirs() : !super.mkdir()) {
+				if (super.isDirectory()) throw new IOException("Can't create directory [" + this + "], directory already exists");
+				throw new IOException("Can't create directory [" + this + "]");
+			}
+		}
+		finally {
+			provider.unlock(this);
+		}
+	}
+
+	@Override
+	public ResourceProvider getResourceProvider() {
+		return provider;
+	}
+
+	@Override
+	public boolean isReadable() {
+		return canRead();
+	}
+
+	@Override
+	public boolean isWriteable() {
+		return canWrite();
+	}
+
+	@Override
+	public boolean renameTo(Resource dest) {
+		try {
+			moveTo(dest);
+			return true;
+		}
+		catch (IOException e) {
+		}
 		return false;
-	    }
-	    finally {
-		provider.unlock(this);
-	    }
-	    return true;
 	}
 
-	if (SystemUtil.isUnix()) {
-	    // need no lock because get/setmode has one
-	    try {
-		setMode(ModeUtil.setWritable(getMode(), value));
-	    }
-	    catch (IOException e) {
-		return false;
-	    }
-	    return true;
+	@Override
+	public boolean isArchive() {
+		return getAttribute(ATTRIBUTE_ARCHIVE);
 	}
 
-	try {
-	    provider.lock(this);
-	    Runtime.getRuntime().exec("attrib -R " + getAbsolutePath());
-	}
-	catch (IOException ioe) {
-	    return false;
-	}
-	finally {
-	    provider.unlock(this);
-	}
-	return true;
-    }
-
-    @Override
-    public boolean createNewFile() {
-	try {
-	    provider.lock(this);
-	    return super.createNewFile();
-	}
-	catch (IOException e) {
-	    return false;
-	}
-	finally {
-	    provider.unlock(this);
-	}
-    }
-
-    @Override
-    public boolean canRead() {
-	try {
-	    provider.read(this);
-	}
-	catch (IOException e) {
-	    return false;
-	}
-	return super.canRead();
-    }
-
-    @Override
-    public boolean canWrite() {
-	try {
-	    provider.read(this);
-	}
-	catch (IOException e) {
-	    return false;
-	}
-	return super.canWrite();
-    }
-
-    @Override
-    public boolean delete() {
-	try {
-	    provider.lock(this);
-	    return super.delete();
-	}
-	catch (IOException e) {
-	    return false;
-	}
-	finally {
-	    provider.unlock(this);
-	}
-    }
-
-    @Override
-    public boolean exists() {
-	try {
-	    provider.read(this);
-	}
-	catch (IOException e) {}
-
-	return super.exists();
-    }
-
-    @Override
-    public boolean isAbsolute() {
-	try {
-	    provider.read(this);
-	}
-	catch (IOException e) {
-	    return false;
-	}
-	return super.isAbsolute();
-    }
-
-    @Override
-    public boolean isDirectory() {
-	try {
-	    provider.read(this);
-	}
-	catch (IOException e) {
-	    return false;
-	}
-	return super.isDirectory();
-    }
-
-    @Override
-    public boolean isFile() {
-	try {
-	    provider.read(this);
-	}
-	catch (IOException e) {
-	    return false;
-	}
-	return super.isFile();
-    }
-
-    @Override
-    public boolean isHidden() {
-	try {
-	    provider.read(this);
-	}
-	catch (IOException e) {
-	    return false;
-	}
-	return super.isHidden();
-    }
-
-    @Override
-    public long lastModified() {
-	try {
-	    provider.read(this);
-	}
-	catch (IOException e) {
-	    return 0;
-	}
-	return super.lastModified();
-    }
-
-    @Override
-    public long length() {
-	try {
-	    provider.read(this);
-	}
-	catch (IOException e) {
-	    return 0;
-	}
-	return super.length();
-    }
-
-    @Override
-    public String[] list() {
-	try {
-	    provider.read(this);
-	}
-	catch (IOException e) {
-	    return null;
-	}
-	return super.list();
-    }
-
-    @Override
-    public boolean mkdir() {
-	try {
-	    provider.lock(this);
-	    return super.mkdir();
-	}
-	catch (IOException e) {
-	    return false;
-	}
-	finally {
-	    provider.unlock(this);
-	}
-    }
-
-    @Override
-    public boolean mkdirs() {
-	try {
-	    provider.lock(this);
-	    return _mkdirs();
-
-	}
-	catch (IOException e) {
-	    return false;
-	}
-	finally {
-	    provider.unlock(this);
-	}
-    }
-
-    private boolean _mkdirs() {
-	if (super.exists()) return false;
-	if (super.mkdir()) return true;
-
-	File parent = super.getParentFile();
-	return (parent != null) && (parent.mkdirs() && super.mkdir());
-    }
-
-    @Override
-    public boolean setLastModified(long time) {
-	try {
-	    provider.lock(this);
-	    return super.setLastModified(time);
-	}
-	catch (Throwable t) {// IllegalArgumentException or IOException
-	    ExceptionUtil.rethrowIfNecessary(t);
-	    return false;
-	}
-	finally {
-	    provider.unlock(this);
+	@Override
+	public boolean isSystem() {
+		return getAttribute(ATTRIBUTE_SYSTEM);
 	}
 
-    }
+	@Override
+	public int getMode() {
+		if (!exists()) return 0;
+		if (SystemUtil.isUnix()) {
+			try {
+				// TODO geht nur fuer file
+				String line = Command.execute("ls -ld " + getPath(), false).getOutput();
 
-    @Override
-    public boolean setReadOnly() {
-	try {
-	    provider.lock(this);
-	    return super.setReadOnly();
-	}
-	catch (IOException e) {
-	    return false;
-	}
-	finally {
-	    provider.unlock(this);
-	}
-    }
+				line = line.trim();
+				line = line.substring(0, line.indexOf(' '));
+				// print.ln(getPath());
+				return ModeUtil.toOctalMode(line);
 
-    @Override
-    public boolean getAttribute(short attribute) {
-	if (!SystemUtil.isWindows()) return false;
+			}
+			catch (Exception e) {
+			}
 
-	String attr = null;
-	if (attribute == ATTRIBUTE_ARCHIVE) attr = "A";
-	else if (attribute == ATTRIBUTE_HIDDEN) attr = "H";
-	else if (attribute == ATTRIBUTE_SYSTEM) attr = "S";
-
-	try {
-	    provider.lock(this);
-	    String result = Command.execute("attrib " + getAbsolutePath(), false).getOutput();
-	    String[] arr = lucee.runtime.type.util.ListUtil.listToStringArray(result, ' ');
-	    for (int i = 0; i < arr.length; i++) {
-		if (attr.equals(arr[i])) return true;
-	    }
+		}
+		int mode = SystemUtil.isWindows() && exists() ? 0111 : 0;
+		if (super.canRead()) mode += 0444;
+		if (super.canWrite()) mode += 0222;
+		return mode;
 	}
-	catch (Exception e) {}
-	finally {
-	    provider.unlock(this);
-	}
-	return false;
-    }
 
-    @Override
-    public void setAttribute(short attribute, boolean value) throws IOException {
-	String attr = null;
-	if (attribute == ATTRIBUTE_ARCHIVE) attr = "A";
-	else if (attribute == ATTRIBUTE_HIDDEN) attr = "H";
-	else if (attribute == ATTRIBUTE_SYSTEM) attr = "S";
-
-	if (!SystemUtil.isWindows()) return;
-	provider.lock(this);
-	try {
-	    Runtime.getRuntime().exec("attrib " + (value ? "+" : "-") + attr + " " + getAbsolutePath());
+	@Override
+	public void setMode(int mode) throws IOException {
+		// TODO unter windows mit setReadable usw.
+		if (!SystemUtil.isUnix()) return;
+		provider.lock(this);
+		try {
+			// print.ln(ModeUtil.toStringMode(mode));
+			if (Runtime.getRuntime().exec(new String[] { "chmod", ModeUtil.toStringMode(mode), getPath() }).waitFor() != 0)
+				throw new IOException("chmod  [" + ModeUtil.toStringMode(mode) + "] [" + toString() + "] failed");
+		}
+		catch (InterruptedException e) {
+			throw new IOException("Interrupted waiting for chmod [" + toString() + "]");
+		}
+		finally {
+			provider.unlock(this);
+		}
 	}
-	finally {
-	    provider.unlock(this);
-	}
-    }
 
-    @Override
-    public boolean equals(Object other) {
-	if (provider.isCaseSensitive()) return super.equals(other);
-	if (!(other instanceof File)) return false;
-	return getAbsolutePath().equalsIgnoreCase(((File) other).getAbsolutePath());
-    }
+	@Override
+	public void setArchive(boolean value) throws IOException {
+		setAttribute(ATTRIBUTE_ARCHIVE, value);
+	}
+
+	@Override
+	public void setHidden(boolean value) throws IOException {
+		setAttribute(ATTRIBUTE_HIDDEN, value);
+	}
+
+	@Override
+	public void setSystem(boolean value) throws IOException {
+		setAttribute(ATTRIBUTE_SYSTEM, value);
+	}
+
+	@Override
+
+	public boolean setReadable(boolean value) {
+		if (!SystemUtil.isUnix()) return false;
+		try {
+			setMode(ModeUtil.setReadable(getMode(), value));
+			return true;
+		}
+		catch (IOException e) {
+			return false;
+		}
+	}
+
+	@Override
+	public boolean setWritable(boolean value) {
+		// setReadonly
+		if (!value) {
+			try {
+				provider.lock(this);
+				if (!super.setReadOnly()) throw new IOException("Can't set resource read-only");
+			}
+			catch (IOException ioe) {
+				return false;
+			}
+			finally {
+				provider.unlock(this);
+			}
+			return true;
+		}
+
+		if (SystemUtil.isUnix()) {
+			// need no lock because get/setmode has one
+			try {
+				setMode(ModeUtil.setWritable(getMode(), value));
+			}
+			catch (IOException e) {
+				return false;
+			}
+			return true;
+		}
+
+		try {
+			provider.lock(this);
+			Runtime.getRuntime().exec("attrib -R " + getAbsolutePath());
+		}
+		catch (IOException ioe) {
+			return false;
+		}
+		finally {
+			provider.unlock(this);
+		}
+		return true;
+	}
+
+	@Override
+	public boolean createNewFile() {
+		try {
+			provider.lock(this);
+			return super.createNewFile();
+		}
+		catch (IOException e) {
+			return false;
+		}
+		finally {
+			provider.unlock(this);
+		}
+	}
+
+	@Override
+	public boolean canRead() {
+		try {
+			provider.read(this);
+		}
+		catch (IOException e) {
+			return false;
+		}
+		return super.canRead();
+	}
+
+	@Override
+	public boolean canWrite() {
+		try {
+			provider.read(this);
+		}
+		catch (IOException e) {
+			return false;
+		}
+		return super.canWrite();
+	}
+
+	@Override
+	public boolean delete() {
+		try {
+			provider.lock(this);
+			return super.delete();
+		}
+		catch (IOException e) {
+			return false;
+		}
+		finally {
+			provider.unlock(this);
+		}
+	}
+
+	@Override
+	public boolean exists() {
+		try {
+			provider.read(this);
+		}
+		catch (IOException e) {
+		}
+
+		return super.exists();
+	}
+
+	@Override
+	public boolean isAbsolute() {
+		try {
+			provider.read(this);
+		}
+		catch (IOException e) {
+			return false;
+		}
+		return super.isAbsolute();
+	}
+
+	@Override
+	public boolean isDirectory() {
+		try {
+			provider.read(this);
+		}
+		catch (IOException e) {
+			return false;
+		}
+		return super.isDirectory();
+	}
+
+	@Override
+	public boolean isFile() {
+		try {
+			provider.read(this);
+		}
+		catch (IOException e) {
+			return false;
+		}
+		return super.isFile();
+	}
+
+	@Override
+	public boolean isHidden() {
+		try {
+			provider.read(this);
+		}
+		catch (IOException e) {
+			return false;
+		}
+		return super.isHidden();
+	}
+
+	@Override
+	public long lastModified() {
+		try {
+			provider.read(this);
+		}
+		catch (IOException e) {
+			return 0;
+		}
+		return super.lastModified();
+	}
+
+	@Override
+	public long length() {
+		try {
+			provider.read(this);
+		}
+		catch (IOException e) {
+			return 0;
+		}
+		return super.length();
+	}
+
+	@Override
+	public String[] list() {
+		try {
+			provider.read(this);
+		}
+		catch (IOException e) {
+			return null;
+		}
+		return super.list();
+	}
+
+	@Override
+	public boolean mkdir() {
+		try {
+			provider.lock(this);
+			return super.mkdir();
+		}
+		catch (IOException e) {
+			return false;
+		}
+		finally {
+			provider.unlock(this);
+		}
+	}
+
+	@Override
+	public boolean mkdirs() {
+		try {
+			provider.lock(this);
+			return _mkdirs();
+
+		}
+		catch (IOException e) {
+			return false;
+		}
+		finally {
+			provider.unlock(this);
+		}
+	}
+
+	private boolean _mkdirs() {
+		if (super.exists()) return false;
+		if (super.mkdir()) return true;
+
+		File parent = super.getParentFile();
+		return (parent != null) && (parent.mkdirs() && super.mkdir());
+	}
+
+	@Override
+	public boolean setLastModified(long time) {
+		try {
+			provider.lock(this);
+			return super.setLastModified(time);
+		}
+		catch (Throwable t) {// IllegalArgumentException or IOException
+			ExceptionUtil.rethrowIfNecessary(t);
+			return false;
+		}
+		finally {
+			provider.unlock(this);
+		}
+
+	}
+
+	@Override
+	public boolean setReadOnly() {
+		try {
+			provider.lock(this);
+			return super.setReadOnly();
+		}
+		catch (IOException e) {
+			return false;
+		}
+		finally {
+			provider.unlock(this);
+		}
+	}
+
+	@Override
+	public boolean getAttribute(short attribute) {
+		if (!SystemUtil.isWindows()) return false;
+
+		try {
+			provider.lock(this);
+			DosFileAttributes attr = Files.readAttributes(this.toPath(), DosFileAttributes.class);
+			if (attribute == ATTRIBUTE_ARCHIVE) {
+				return attr.isArchive();
+			}
+			else if (attribute == ATTRIBUTE_HIDDEN) {
+				return attr.isHidden();
+			}
+			else if (attribute == ATTRIBUTE_SYSTEM) {
+				return attr.isSystem();
+			}
+			else {
+				return false;
+			}
+		}
+		catch (Exception e) {
+			return false;
+		}
+		finally {
+			provider.unlock(this);
+		}
+	}
+
+	@Override
+	public void setAttribute(short attribute, boolean value) throws IOException {
+		if (!SystemUtil.isWindows()) return;
+
+		provider.lock(this);
+		try {
+			if (attribute == ATTRIBUTE_ARCHIVE) {
+				Files.setAttribute(this.toPath(), "dos:archive", value);
+			}
+			else if (attribute == ATTRIBUTE_HIDDEN) {
+				Files.setAttribute(this.toPath(), "dos:hidden", value);
+			}
+			else if (attribute == ATTRIBUTE_SYSTEM) {
+				Files.setAttribute(this.toPath(), "dos:system", value);
+			}
+		}
+		catch (IOException e) {
+			return;
+		}
+		finally {
+			provider.unlock(this);
+		}
+	}
+
+	@Override
+	public boolean equals(Object other) {
+		if (provider.isCaseSensitive()) return super.equals(other);
+		if (!(other instanceof File)) return false;
+		return getAbsolutePath().equalsIgnoreCase(((File) other).getAbsolutePath());
+	}
 }
