@@ -34,74 +34,79 @@ import lucee.transformer.expression.literal.LitLong;
  */
 public final class LitLongImpl extends ExpressionBase implements LitLong {
 
-    private long l;
+	private long l;
 
-    /**
-     * constructor of the class
-     * 
-     * @param d
-     * @param line
-     */
-    public LitLongImpl(Factory f, long l, Position start, Position end) {
-	super(f, start, end);
-	this.l = l;
-    }
-
-    @Override
-    public long getLongValue() {
-	return l;
-    }
-
-    @Override
-    public Long getLong() {
-	return new Long(l);
-    }
-
-    @Override
-    public String getString() {
-	return Caster.toString(l);
-    }
-
-    /**
-     * @return return value as a Boolean Object
-     */
-    public Boolean getBoolean() {
-	return Caster.toBoolean(l);
-    }
-
-    /**
-     * @return return value as a boolean value
-     */
-    public boolean getBooleanValue() {
-	return Caster.toBooleanValue(l);
-    }
-
-    /**
-     * @see lucee.transformer.expression.Expression#_writeOut(org.objectweb.asm.commons.GeneratorAdapter,
-     *      int)
-     */
-    @Override
-    public Type _writeOut(BytecodeContext bc, int mode) {
-	GeneratorAdapter adapter = bc.getAdapter();
-	adapter.push(l);
-	if (mode == MODE_REF) {
-	    adapter.invokeStatic(Types.CASTER, Methods.METHOD_TO_LONG_FROM_LONG_VALUE);
-	    return Types.LONG;
+	/**
+	 * constructor of the class
+	 * 
+	 * @param d
+	 * @param line
+	 */
+	public LitLongImpl(Factory f, long l, Position start, Position end) {
+		super(f, start, end);
+		this.l = l;
 	}
-	return Types.LONG_VALUE;
-    }
 
-    @Override
-    public Double getDouble(Double defaultValue) {
-	return getDouble();
-    }
+	@Override
+	public long getLongValue() {
+		return l;
+	}
 
-    private Double getDouble() {
-	return new Double(l);
-    }
+	@Override
+	public Long getLong() {
+		return Long.valueOf(l);
+	}
 
-    @Override
-    public Boolean getBoolean(Boolean defaultValue) {
-	return getBoolean();
-    }
+	@Override
+	public Number getNumber() {
+		return getLong();
+	}
+
+	@Override
+	public Number getNumber(Number dv) {
+		return getLong();
+	}
+
+	@Override
+	public String getString() {
+		return Caster.toString(l);
+	}
+
+	/**
+	 * @return return value as a Boolean Object
+	 */
+	public Boolean getBoolean() {
+		return Caster.toBoolean(l);
+	}
+
+	/**
+	 * @return return value as a boolean value
+	 */
+	public boolean getBooleanValue() {
+		return Caster.toBooleanValue(l);
+	}
+
+	/**
+	 * @see lucee.transformer.expression.Expression#_writeOut(org.objectweb.asm.commons.GeneratorAdapter,
+	 *      int)
+	 */
+	@Override
+	public Type _writeOut(BytecodeContext bc, int mode) {
+		GeneratorAdapter adapter = bc.getAdapter();
+		adapter.push(l);
+		if (mode == MODE_REF) {
+			adapter.invokeStatic(Types.CASTER, Methods.METHOD_TO_LONG_FROM_LONG_VALUE);
+			return Types.LONG;
+		}
+		return Types.LONG_VALUE;
+	}
+
+	private Double getDouble() {
+		return Double.valueOf(l);
+	}
+
+	@Override
+	public Boolean getBoolean(Boolean defaultValue) {
+		return getBoolean();
+	}
 }
